--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# PyTorch checkpoint
+*.pth 
+
+# ONNX model for inference
+*.onnx
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
